<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.2</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>com.green.sahwang</groupId>
	<artifactId>sahwang</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<description>Final Project</description>

	<modules>
		<module>infrastructure</module>
		<module>app</module>
	</modules>

	<properties>
		<spring-boot.version>3.0.2</spring-boot.version>
		<java.version>17</java.version>
		<mysql-connector-j.version>8.3.0</mysql-connector-j.version>
		<lombok.version>1.18.34</lombok.version>
		<spring-kafka.version>3.0.2</spring-kafka.version>
		<kafka-avro-serializer.version>7.2.1</kafka-avro-serializer.version>
		<avro.version>1.11.3</avro.version>
		<snappy.version>1.1.8.4</snappy.version>
		<jwt.version>0.12.3</jwt.version>
		<modelmapper.version>3.2.1</modelmapper.version>
		<springdoc-openapi-starter-webmvc-ui.version>2.6.0</springdoc-openapi-starter-webmvc-ui.version>
		<swagger-annotations.version>2.2.25</swagger-annotations.version>
		<querydsl-version>5.0.0</querydsl-version>
		<mybatis-spring-boot-starter-version>3.0.4</mybatis-spring-boot-starter-version>
		<mybatis-version>3.5.17</mybatis-version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<!-- kafka -->
			<dependency>
				<groupId>com.green.sahwang</groupId>
				<artifactId>kafka-config-data</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.green.sahwang</groupId>
				<artifactId>kafka-model</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.green.sahwang</groupId>
				<artifactId>kafka-producer</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>com.green.sahwang</groupId>
				<artifactId>kafka-consumer</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>com.green.sahwang</groupId>
				<artifactId>app</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.xerial.snappy</groupId>
				<artifactId>snappy-java</artifactId>
				<version>${snappy.version}</version>
			</dependency>

			<!-- jwt token 시작-->
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-api</artifactId>
				<version>${jwt.version}</version>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-impl</artifactId>
				<version>${jwt.version}</version>
				<scope>runtime</scope>
			</dependency>
			<dependency>
				<groupId>io.jsonwebtoken</groupId>
				<artifactId>jjwt-jackson</artifactId>
				<version>${jwt.version}</version>
			</dependency>
			<!-- jwt token 끝-->
			<dependency>
				<groupId>org.modelmapper</groupId>
				<artifactId>modelmapper</artifactId>
				<version>${modelmapper.version}</version>
			</dependency>
		</dependencies>

	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
			<version>${lombok.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-logging</artifactId>
			<version>${spring-boot.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-starter-webmvc-ui -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>${springdoc-openapi-starter-webmvc-ui.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/io.swagger.core.v3/swagger-annotations -->
		<dependency>
			<groupId>io.swagger.core.v3</groupId>
			<artifactId>swagger-annotations</artifactId>
			<version>${swagger-annotations.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<release>${java.version}</release>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
